[gd_scene load_steps=8 format=3 uid="uid://n2ydvfvtnd6p"]

[ext_resource type="Script" path="res://scenes/end_screen/end_screen.gd" id="1_2i7yh"]
[ext_resource type="Texture2D" uid="uid://bb15tmavpd8co" path="res://assets/ui/background2.png" id="1_pmwbq"]
[ext_resource type="Texture2D" uid="uid://djfhf20y7qmof" path="res://assets/ui/hot gameover.png" id="3_ituxo"]
[ext_resource type="Texture2D" uid="uid://d1nuec3o6fybl" path="res://assets/ui/cold gameover.png" id="4_awn1u"]

[sub_resource type="Animation" id="Animation_pwwko"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_15t11"]
resource_name = "fadein"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pkg2x"]
_data = {
"RESET": SubResource("Animation_pwwko"),
"fadein": SubResource("Animation_15t11")
}

[node name="EndScreen" type="TextureRect"]
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_pmwbq")
stretch_mode = 1
script = ExtResource("1_2i7yh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pkg2x")
}

[node name="Hot" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ituxo")
expand_mode = 1

[node name="Cold" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_awn1u")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -468.0
offset_top = 63.0
offset_right = 468.0
offset_bottom = 476.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 50

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 25
columns = 2

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 80
text = "Player 1 won!"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 40
text = "Had a temperature of 3."
horizontal_alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 80
text = "Player 2 lost..."
horizontal_alignment = 1

[node name="Label5" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 40
text = "Had a temperature of 3."
horizontal_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"StyledButton"
theme_override_font_sizes/font_size = 64
text = "Play Again"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
